<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nippledefensecommittee.quicke.framework.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/base_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ramenshop"
        android:scaleType="centerCrop"
        android:contentDescription="@null"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/base_TV_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark85Opac"
            android:elevation="@dimen/base_TV_elevation"
            android:text="@string/base_text_HoT"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@color/main_text"

            android:padding="@dimen/base_TV_padding"
            android:paddingEnd="@dimen/base_TV_padding_end"
            android:paddingLeft="@dimen/base_TV_padding_left"
            android:paddingRight="@dimen/base_TV_padding_end"
            android:paddingStart="@dimen/base_TV_padding_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="@dimen/base_bias_ver" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/main_button_eat"
            android:layout_width="@dimen/base_button_choice_length"
            android:layout_height="@dimen/base_button_choice_length"
            android:elevation="@dimen/base_button_elevation"
            android:scaleType="centerInside"
            android:theme="@style/StandardImageButton"

            android:layout_marginTop="@dimen/base_button_choice_margin_ver"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/main_button_drink"
            app:layout_constraintTop_toBottomOf="@+id/base_TV_food" />

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/main_button_drink"
            android:layout_width="@dimen/base_button_choice_length"
            android:layout_height="@dimen/base_button_choice_length"
            android:elevation="@dimen/base_button_elevation"
            android:scaleType="centerInside"
            android:theme="@style/StandardImageButton"

            android:layout_marginTop="@dimen/base_button_choice_margin_ver"
            app:layout_constraintLeft_toRightOf="@+id/main_button_eat"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/base_TV_food" />

        <TextView
            android:id="@+id/main_TV_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark85Opac"
            android:elevation="@dimen/base_TV_elevation"
            android:text="@string/base_text_price"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@color/main_text"

            android:layout_marginBottom="@dimen/base_margin_ver"
            android:layout_marginTop="@dimen/base_margin_ver"
            android:padding="@dimen/base_TV_padding"
            android:paddingEnd="@dimen/base_TV_padding_end"
            android:paddingLeft="@dimen/base_TV_padding_left"
            android:paddingRight="@dimen/base_TV_padding_end"
            android:paddingStart="@dimen/base_TV_padding_left"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_button_drink" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/main_button_price_1"
            android:layout_width="@dimen/base_button_price_width"
            android:layout_height="@dimen/base_button_price_height"
            android:background="@drawable/button_price_left_ripple"
            android:text="@string/base_button_price_1"
            android:theme="@style/StandardButton"

            android:layout_marginBottom="@dimen/base_button_price_margin_ver"
            android:layout_marginTop="@dimen/base_button_price_margin_ver"
            app:layout_constraintBottom_toBottomOf="@+id/main_TV_distance"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/main_button_price_2"
            app:layout_constraintTop_toTopOf="@+id/main_TV_price" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/main_button_price_2"
            android:layout_width="@dimen/base_button_price_width"
            android:layout_height="@dimen/base_button_price_height"
            android:background="@drawable/button_bg_ripple"
            android:text="@string/base_button_price_2"
            android:theme="@style/StandardButton"

            android:layout_marginBottom="@dimen/base_button_price_margin_ver"
            android:layout_marginTop="@dimen/base_button_price_margin_ver"
            app:layout_constraintBottom_toBottomOf="@+id/main_TV_distance"
            app:layout_constraintLeft_toRightOf="@+id/main_button_price_1"
            app:layout_constraintRight_toLeftOf="@+id/main_button_price_3"
            app:layout_constraintTop_toTopOf="@+id/main_TV_price" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/main_button_price_3"
            android:layout_width="@dimen/base_button_price_width"
            android:layout_height="@dimen/base_button_price_height"
            android:background="@drawable/button_bg_ripple"
            android:text="@string/base_button_price_3"
            android:theme="@style/StandardButton"

            android:layout_marginBottom="@dimen/base_button_price_margin_ver"
            android:layout_marginTop="@dimen/base_button_price_margin_ver"
            app:layout_constraintBottom_toBottomOf="@+id/main_TV_distance"
            app:layout_constraintLeft_toRightOf="@+id/main_button_price_2"
            app:layout_constraintRight_toLeftOf="@+id/main_button_price_4"
            app:layout_constraintTop_toTopOf="@+id/main_TV_price" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/main_button_price_4"
            android:layout_width="@dimen/base_button_price_width"
            android:layout_height="@dimen/base_button_price_height"
            android:background="@drawable/button_price_right_ripple"
            android:text="@string/base_button_price_4"
            android:theme="@style/StandardButton"

            android:layout_marginBottom="@dimen/base_button_price_margin_ver"
            android:layout_marginTop="@dimen/base_button_price_margin_ver"
            app:layout_constraintBottom_toBottomOf="@+id/main_TV_distance"
            app:layout_constraintLeft_toRightOf="@+id/main_button_price_3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_TV_price" />


        <TextView
            android:id="@+id/main_TV_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark85Opac"
            android:elevation="@dimen/base_TV_elevation"
            android:text="@string/base_text_distance"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@color/main_text"

            android:layout_marginBottom="@dimen/base_margin_ver"
            android:layout_marginTop="@dimen/base_margin_ver"
            android:padding="@dimen/base_TV_padding"
            android:paddingEnd="@dimen/base_TV_padding_end"
            android:paddingLeft="@dimen/base_TV_padding_left"
            android:paddingRight="@dimen/base_TV_padding_end"
            android:paddingStart="@dimen/base_TV_padding_left"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_button_price_1" />

        <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/main_seekbar_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/seek_distance_prog"
            android:thumb="@drawable/seek_distance_thumb"
            android:max="@dimen/base_seekbar_max"

            android:layout_marginEnd="@dimen/base_progress_margin_hor"
            android:layout_marginLeft="@dimen/base_progress_margin_hor"
            android:layout_marginRight="@dimen/base_progress_margin_hor"
            android:layout_marginStart="@dimen/base_progress_margin_hor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_TV_distance"
            app:layout_constraintBottom_toBottomOf="@+id/main_seekbar_indicator"/>

        <TextView
            android:id="@+id/main_seekbar_indicator"
            android:layout_width="@dimen/base_seekbar_TV_width"
            android:layout_height="wrap_content"
            android:text="@string/base_seekbar_range_default"
            android:background="@color/colorPrimaryDark85Opac"
            android:textColor="@color/main_text"
            android:textSize="16sp"
            android:elevation="@dimen/base_TV_elevation"
            android:gravity="center"

            android:layout_marginRight="@dimen/base_seekbar_TV_margin_hor"
            android:layout_marginEnd="@dimen/base_seekbar_TV_margin_hor"
            android:paddingLeft="@dimen/base_seekbar_TV_padding_hor"
            android:paddingStart="@dimen/base_seekbar_TV_padding_hor"
            android:paddingRight="@dimen/base_seekbar_TV_padding_hor"
            android:paddingEnd="@dimen/base_seekbar_TV_padding_hor"
            android:paddingTop="@dimen/base_seekbar_TV_padding_ver"
            android:paddingBottom="@dimen/base_seekbar_TV_padding_ver"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_seekbar_distance"
            app:layout_constraintBottom_toBottomOf="@+id/main_button_go"/>

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/main_button_go"
            android:layout_width="@dimen/base_button_go_width"
            android:layout_height="@dimen/base_button_go_height"
            android:adjustViewBounds="true"
            android:elevation="@dimen/base_button_elevation"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_gow"
            android:theme="@style/StandardImageButton"

            android:layout_margin="@dimen/base_button_go_margin"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="parent" />
    </android.support.constraint.ConstraintLayout>
</FrameLayout>