<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/viewpage_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/sling_image_CD"
        android:scaleType="centerCrop"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/viewpage_image_guideline"
        card_view:layout_constraintTop_creator="1"
        card_view:layout_constraintRight_creator="1"
        card_view:layout_constraintBottom_creator="1"
        card_view:layout_constraintLeft_creator="1" />

    <ImageView
        android:id="@+id/viewpage_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/sling_image_CD"
        android:scaleType="centerInside"
        android:src="@drawable/yelp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/viewpage_image_guideline" />

    <android.support.v7.widget.CardView
        android:id="@+id/viewpage_titlecard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewpage_image_guideline"
        app:layout_constraintBottom_toBottomOf="@+id/viewpage_reviewcard"
        app:layout_constraintVertical_bias="0.0"
        card_view:background="@color/WHITE"
        card_view:layout_constraintRight_creator="1"
        card_view:layout_constraintLeft_creator="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/viewpage_title"
                style="@style/dinelist_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingBottom="@dimen/dinelist_title_padding_ver"
                android:paddingEnd="@dimen/dinelist_title_padding_hor"
                android:paddingLeft="@dimen/dinelist_title_padding_hor"
                android:paddingRight="@dimen/dinelist_title_padding_hor"
                android:paddingStart="@dimen/dinelist_title_padding_hor"
                android:paddingTop="@dimen/dinelist_title_padding_ver" />

            <TextView
                android:id="@+id/viewpage_distance"
                style="@style/dinelist_distance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingBottom="@dimen/dinelist_distance_padding_ver"
                android:paddingEnd="@dimen/dinelist_distance_padding_hor"
                android:paddingLeft="@dimen/dinelist_distance_padding_hor"
                android:paddingRight="@dimen/dinelist_distance_padding_hor"
                android:paddingStart="@dimen/dinelist_distance_padding_hor"
                android:paddingTop="@dimen/dinelist_distance_padding_ver" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/viewpage_reviewcard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewpage_titlecard"
        app:layout_constraintBottom_toBottomOf="parent"
        card_view:background="@color/WHITE"
        card_view:layout_constraintRight_creator="1"
        card_view:layout_constraintLeft_creator="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/viewpage_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/viewpage_rating"
                android:scaleType="centerInside"

                android:paddingBottom="@dimen/dinelist_rating_padding_ver"
                android:paddingTop="@dimen/dinelist_rating_padding_ver"
                android:paddingLeft="@dimen/dinelist_rating_padding_hor"
                android:paddingRight="@dimen/dinelist_rating_padding_hor"
                android:paddingStart="@dimen/dinelist_rating_padding_hor"
                android:paddingEnd="@dimen/dinelist_rating_padding_hor" />

            <TextView
                android:id="@+id/viewpage_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingBottom="@dimen/dinelist_review_padding_ver"
                android:paddingTop="@dimen/dinelist_review_padding_ver"
                android:paddingLeft="@dimen/dinelist_title_padding_hor"
                android:paddingRight="@dimen/dinelist_title_padding_hor"
                android:paddingStart="@dimen/dinelist_title_padding_hor"
                android:paddingEnd="@dimen/dinelist_title_padding_hor" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/directionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewpage_go"
        android:textColor="@color/WHITE"
        android:theme="@style/viewpage_go"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/viewpage_image_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"
        card_view:layout_editor_absoluteY="369dp"
        card_view:layout_editor_absoluteX="0dp" />
</android.support.constraint.ConstraintLayout>